--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,34 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>BPR Suryajaya Kubutambahan - Semakin Dekat di Hati</title>
 		<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png" />
+		<title>BPR Suryajaya Kubutambahan - Semakin Dekat di Hati</title>
+
+		<!-- Meta Here -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<meta name="description" content="BPR Suryajaya Kubutambahan - Semakin Dekat di Hati" />
+		<meta name="robots" content="index,follow" />
+		<meta
+			name="keywords"
+			content="bpr, bpr suryajaya kubutambahan, suryajaya, bank, perekonomian, rakyat"
+		/>
+		<meta name="author" content="IT BPR Suryajaya Kubutambahan" />
+		<meta property="og:title" content="BPR Suryajaya Kubutambahan" />
+		<meta property="og:description" content="BPR Suryajaya Kubutambahan - Semakin Dekat di Hati" />
+		<meta property="og:image" content="assets/images/favicon.png" />
+		<meta property="og:url" content="https://bpr-suryajaya-kbt.netlify.app" />
+		<meta property="og:type" content="page" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="reply-to" content="info@bprsuryajaya.com" />
+		<meta name="owner" content="info@bprsuryajaya.com" />
+		<meta name="copyright" content="IT BPR Suryajaya Kubutambahan" />
+		<meta name="expires" content="Saturday, 17-Feb-30 08:27:02 GMT" />
+		<meta name="web_author" content="IT BPR Suryajaya Kubutambahan" />
+		<meta name="web_author" content="https://bpr-suryajaya-kbt.netlify.app" />
+		<!-- End Meta -->
+		 
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
