fix: fix image not loaded

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="shortcut icon" type="image/png" href="assets/images/favicon.png" />
+		<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png" />
 		<title>BPR Suryajaya Kubutambahan - Semakin Dekat di Hati</title>
 
 		<!-- Meta Here -->
@@ -30,7 +30,7 @@
 		<meta name="web_author" content="IT BPR Suryajaya Kubutambahan" />
 		<meta name="web_author" content="https://bpr-suryajaya-kbt.netlify.app" />
 		<!-- End Meta -->
-		 
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
