--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,7 @@
 		<title>BPR Suryajaya Kubutambahan - Semakin Dekat di Hati</title>
 
 		<!-- Meta Here -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta name="description" content="BPR Suryajaya Kubutambahan - Semakin Dekat di Hati" />
