--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 		<meta name="author" content="IT BPR Suryajaya Kubutambahan" />
 		<meta property="og:title" content="BPR Suryajaya Kubutambahan" />
 		<meta property="og:description" content="BPR Suryajaya Kubutambahan - Semakin Dekat di Hati" />
-		<meta property="og:image" content="assets/images/favicon.png" />
+		<meta property="og:image" content="/assets/images/favicon.png" />
 		<meta property="og:url" content="https://bpr-suryajaya-kbt.netlify.app" />
 		<meta property="og:type" content="page" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
